--- a/src/plantenApp/view/ControlerenEnGoedkeurenTransacties.fxml
+++ b/src/plantenApp/view/ControlerenEnGoedkeurenTransacties.fxml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
@@ -12,13 +15,54 @@
         <content>
           <AnchorPane>
                <children>
-                  <VBox fx:id="VBoxToCheckList" layoutX="14.0" layoutY="14.0">
+                  <VBox layoutX="14.0" layoutY="14.0" spacing="10.0">
                      <children>
                         <Button mnemonicParsing="false" onMouseClicked="#Clicked_terug" text="Terug">
                            <font>
                               <Font size="14.0" />
                            </font>
                         </Button>
+                        <ScrollPane hbarPolicy="NEVER" maxHeight="500.0">
+                           <opaqueInsets>
+                              <Insets />
+                           </opaqueInsets>
+                           <content>
+                              <HBox fx:id="HBoxListToCheck">
+                                 <children>
+                                    <VBox fx:id="VBoxPlantNaam" spacing="30.0">
+                                       <HBox.margin>
+                                          <Insets left="10.0" />
+                                       </HBox.margin>
+                                       <padding>
+                                          <Insets right="20.0" top="5.0" />
+                                       </padding>
+                                    </VBox>
+                                    <VBox fx:id="VBoxNaamGebruiker" spacing="30.0">
+                                       <HBox.margin>
+                                          <Insets left="10.0" />
+                                       </HBox.margin>
+                                       <padding>
+                                          <Insets right="20.0" top="5.0" />
+                                       </padding>
+                                    </VBox>
+                                    <VBox fx:id="VBoxButtonsControleer" layoutX="10.0" layoutY="10.0" spacing="20.0">
+                                       <HBox.margin>
+                                          <Insets left="10.0" />
+                                       </HBox.margin>
+                                       <padding>
+                                          <Insets right="30.0" />
+                                       </padding>
+                                    </VBox>
+                                 </children>
+                                 <padding>
+                                    <Insets bottom="10.0" top="10.0" />
+                                 </padding>
+                              </HBox>
+                           </content>
+                           <VBox.margin>
+                              <Insets />
+                           </VBox.margin>
+                        </ScrollPane>
                      </children>
                   </VBox>
                </children>
