--- a/src/plantenApp/view/GedetailleerdeFiches_(teControleren).fxml
+++ b/src/plantenApp/view/GedetailleerdeFiches_(teControleren).fxml
@@ -1,18 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.TitledPane?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="Anchorpane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="887.0" prefWidth="1334.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="plantenApp.ControllerValidatiePlant">
+<AnchorPane fx:id="Anchorpane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="887.0" prefWidth="1334.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="plantenApp.ControllerValidatiePlant">
     <children>
         <ScrollPane fx:id="ScrollPane" fitToHeight="true" fitToWidth="true" prefHeight="888.0" prefWidth="1335.0">
             <content>
@@ -1049,7 +1042,7 @@
                                                                                                                         <Font size="14.0" />
                                                                                                                     </font>
                                                                                                                 </Label>
-                                                                                                                <Label fx:id="Sept" alignment="CENTER" prefHeight="30.0" prefWidth="80.0" text="0" textFill="#838383">
+                                                                                                                <Label fx:id="blMinBloeihoogteSept" alignment="CENTER" prefHeight="30.0" prefWidth="80.0" text="0" textFill="#838383">
                                                                                                                     <font>
                                                                                                                         <Font size="14.0" />
                                                                                                                     </font>
